add article on main, page1, and page2

--- a/main.html
+++ b/main.html
@@ -15,6 +15,8 @@
 		<a href="page1.html">Page 1</a>
 		<a href="page2.html">Page 2</a>
 	</nav>
+	<h2>Main page article header</h2>
+	<article>Main page article </article>
 	<footer>Copyright 2022</footer>
 </body>
 </html>
