--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 	<h1>Page 1</h1>
+	<h2>Page 1 page article header</h2>
+	<article>Page 1 page article </article>	
 	<footer>Copyright 2022</footer>
 </body>
 </html>
