--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 	<h1>Page 2</h1>
+	<h2>Page 2 page article header</h2>
+	<article>Page 2 page article </article>	
 	<footer>Copyright 2022</footer>
 </body>
 </html>
