--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 	<nav>
 		<a href="page1.html">Page 1</a>
 		<a href="page2.html">Page 2</a>
+		<a href="page3.html">Page 3</a>
 	</nav>
 	<h2>Main page article header</h2>
 	<article>Main page article </article>
