add images in article in main

--- a/main.html
+++ b/main.html
@@ -18,7 +18,10 @@
 		<a href="http://specialist.ru">Specialist.ru</a>
 	</nav>
 	<h2>Main page article header</h2>
-	<article>Main page article </article>
+	<article>
+		Main page article 
+		add images
+	</article>
 	<footer>Copyright 2022</footer>
 </body>
 </html>
